--- a/pyquote/templates/show.html
+++ b/pyquote/templates/show.html
@@ -1,8 +1,18 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h1>{% block title %}pyquote{% endblock %}</h1>
+    <h1>{% block title %}show{% endblock %}</h1>
 {% endblock %}
 {% block content %}
-
+    {% for quote in quotes %}
+        <header>
+            <div>
+                <h1>{{ quote['quote'] }}</h1>
+                <div>by {{ quote['author'] }}</div>
+            </div>
+        </header>
+        {% if not loop.last %}
+            <hr>
+        {% endif %}
+    {% endfor %}
 {% endblock %}
