--- a/pyquote/templates/base.html
+++ b/pyquote/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %} - pyquote</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='search.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
     <h1>pyquote</h1>
     <ul>
