--- a/pyquote/templates/show.html
+++ b/pyquote/templates/show.html
@@ -1,13 +1,20 @@
+<!DOCTYPE html>
 {% extends 'base.html' %}
 
-{% block header %}
-    <h1>{% block title %}show{% endblock %}</h1>
+{% block title %}{{subject}}{% endblock %}
+{% block link %}
+<link rel="stylesheet" href="{{ url_for('static', filename='show.css') }}">
 {% endblock %}
+{% block subject %}{{subject}}{% endblock %}
 {% block content %}
-    <header>
-        <div>
-            <h1>{{ quotes[quote_id]['quote'] }}</h1>
-            <div>by {{ quotes[quote_id]['author'] }}</div>
+<body background={{ images[image_id]['image_url'] }} style="color: ivory;">
+        <div class="quote">
+            <p>
+                {{ quotes[quote_id]['quote'] }}
+            </p>
         </div>
-    </header>
+        <div class="author">
+            {{ quotes[quote_id]['author'] }}
+        </div>
+</body>
 {% endblock %}
