--- a/pyquote/templates/base.html
+++ b/pyquote/templates/base.html
@@ -4,7 +4,7 @@
 {% block link %}{% endblock %}
 <header>
 <div class="topnav">
-    <a href="/">pyquote</a>
+    <a href="/" title="pyquote search page">pyquote</a>
     {% block subject%}{% endblock %}
 </div>
 </header>
