--- a/pyquote/static/base.css
+++ b/pyquote/static/base.css
@@ -51,3 +51,8 @@ body {
     color: lightgray;
     text-decoration: None;
 }
+
+.foot svg {
+    vertical-align: -.125em;
+    display: inline-block;
+}
